fix alignment for pic and text for acupuncture page

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -179,7 +179,6 @@ img {
     display: none;
   }
   &.section-image {
-    border-radius: 100%;
     box-shadow: 3px 2px 10px gray;
     max-width: 100%;
     margin: 0 auto;
@@ -322,10 +321,6 @@ div.container {
   max-width: 100%;
   margin: 0 auto;
   text-align: center;
-}
-
-div.first {
-  background-color: lighten($lavenderColor, 10%);
 }
 
 /* ------------------------------------------------------------
@@ -576,11 +571,16 @@ ACUPUNCTURE FOR LARGER SCREENS > 800px
 @media screen and (min-width: 800px) {
 
   div.section-image {
-    margin: 3em;
+    margin: 1em;
     width: 20%;
     min-width: 300px;
-    -webkit-shape-outside:circle();
-    shape-outside:circle();
+    &.acupuncture-image {
+      margin-bottom: 0;
+    }
+  }
+
+  div.section-p.first {
+    text-align: right;
   }
 
 }
